--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+/* general CSS */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -9,6 +11,7 @@ body {
     background-color: rgb(206, 204, 204);
 }
 
+/* Header and Navigation */
 .navbar {
     display: flex;
     align-items: center;
@@ -17,6 +20,7 @@ body {
     background-color: #EA4E4E;
     border-bottom: 1px solid black;
     box-shadow: 0 4px 2px -2px black;
+    margin-bottom: 50px;
 }
 
 .header-name:hover {
@@ -38,4 +42,13 @@ body {
 .navbar-list-item:hover {
     cursor: pointer;
     text-decoration: underline 3px;
+}
+
+/* Footer */
+.footer {
+    margin-top: 50px;
+    padding: 20px 20px;
+    background-color: #EA4E4E;
+    border-top: 1px solid black;
+    box-shadow: 0px -2px 2px black;
 }
