--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
     background-color: rgb(206, 204, 204);
 }
 
+.height-container {
+    height: 100vh;
+}
+
 /* Header and Navigation */
 .navbar {
     display: flex;
@@ -67,10 +71,24 @@ body {
     background-color: #EA4E4E;
     border-top: 1px solid black;
     box-shadow: 0px -2px 2px black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.footer-text {
-    text-align: center;
+.footer-link {
+    color: black;
+}
+
+.footer-icon {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.footer-icon:hover {
+    scale: 1.1;
+    transition-duration: 100ms;
+    cursor: pointer;
 }
 
 /* contact section */
@@ -117,5 +135,34 @@ body {
     transition-duration: 100ms;
 }
 
+/* about me section */
+.about-me-section {
+    width: 80vw;
+    background-color: #EA4E4E;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+    border-radius: 5px;
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;    
+}
+
+.about-me-left-side {
+    margin-right: 30px;
+}
+
+.hero-image {
+    height: 400px;
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+#about-me-title {
+    font-size: 2.4rem;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
 
 
