--- a/src/index.css
+++ b/src/index.css
@@ -165,4 +165,64 @@ body {
     margin-bottom: 30px;
 }
 
+/* portfolio section */
+.portfolio-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-items: center;
+}
 
+.project {
+    display: inline-block;
+    background-color: black;
+    width: 25vw;
+    height: 25vw;
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+
+
+.project-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.6;
+    border-radius: 5px;
+}
+
+.project-container {
+    padding: 15px 10px 15px 10px;
+    background-color: #EA4E4E;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.demo-code-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.project-title {
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.project-code, .project-demo {
+    text-decoration: none;
+    color: black;
+    padding: 10px 20px;
+    background-color: rgb(206, 204, 204);
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+.project-code:hover, .project-demo:hover {
+    scale: 1.05;
+    transition-duration: 100ms;
+}
